# robustness_metric

./: CMakeLists.txt
data/: gt.csv
docker/: Dockerfile  docker_build.bash  docker_run.bash
include/basalt/: rd_spline.h  so3_spline.h  sophus_utils.hpp  spline_common.h
result/: gt_res.txt
simulate/: draw.py  postp4.py  postp5.py  postp6.py  traj0.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt  traj6.txt  traj_delta1.txt  traj_delta2.txt  traj_delta3.txt  traj_delta3.txt.bak
simultate/: draw.py  postp1.py  postp2.py  postp3.py  postp4.py  postp5.py  postp6.py  traj0.txt  traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt  traj6.txt  traj_delta1.txt  traj_delta2.txt
src/: basalt_test.cpp  eval_robustness.cpp  eval_robustness_batch.cpp
